--- a/ports.ini
+++ b/ports.ini
@@ -2,8 +2,28 @@
 portName = COM9
 serialNumber = SKC2E65A5C
 description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 1
-work = on
+work = off
+[MK1-rez]
+portName = COM8
+serialNumber = SKC2E65A5C
+description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 2
+work = off
 [MK2-osn]
+portName = COM9
+serialNumber = SKC2E65A5C
+description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 1
+work = on
+[MK2-rez]
+portName = COM8
+serialNumber = SKC2E65A5C
+description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 2
+work = off
+[MK3-osn]
+portName = COM9
+serialNumber = SKC2E65A5C
+description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 1
+work = off
+[MK3-rez]
 portName = COM8
 serialNumber = SKC2E65A5C
 description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 2
