Готовое ПО с AdminTools

--- a/ports.ini
+++ b/ports.ini
@@ -28,3 +28,6 @@ portName = COM8
 serialNumber = SKC2E65A5C
 description = Silicon Labs Quad CP2108 USB to UART Bridge: Interface 2
 work = off
+
+[Admin]
+AdminTools = 1
